--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,3 +1,9 @@
+.container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
 footer {
   display: flex;
   flex-direction: column;
