--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,7 +1,8 @@
 .container {
   display: flex;
   flex-direction: column;
+  align-items: center;
   max-width: 1240px;
   width: 100%;
-  margin-top: 24px;
+  margin: 0 auto;
 }
