Mise a jour Header jsx scss & Footer scss

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -10,11 +10,11 @@ footer {
   justify-content: center;
   align-items: center;
   width: 100%;
-  max-width: 1240px;
+  max-width: 1440px;
   height: 209px;
   background-color: black;
   margin: 0;
-  padding: 0;
+  padding-top: 50px;
   gap: 29px;
 
   img {
