--- a/src/pages/About/About.module.scss
+++ b/src/pages/About/About.module.scss
@@ -2,4 +2,17 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 40px;
+  margin: auto;
+  margin-bottom: 40px;
+}
+
+.collapseContainer {
+  width: 1023px;
+  height: auto;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
 }
