--- a/src/components/Annonces/Annonces.module.scss
+++ b/src/components/Annonces/Annonces.module.scss
@@ -4,7 +4,7 @@
   max-width: 1240px;
   width: 100%;
   gap: 50px;
-  margin-top: 50px;
+  margin: 50px 0;
   padding: 50px;
   background-color: #f6f6f6;
   border-radius: 25px;
