--- a/src/components/Annonces/Annonces.module.scss
+++ b/src/components/Annonces/Annonces.module.scss
@@ -15,6 +15,13 @@
     height: 340px;
     border-radius: 10px;
     overflow: hidden;
+    &:hover {
+      img {
+        // transform: scale(1.05);
+        // transition: 0.5s ease;
+        filter: brightness(90%);
+      }
+    }
 
     img {
       width: 100%;
