--- a/src/pages/About/About.module.scss
+++ b/src/pages/About/About.module.scss
@@ -2,13 +2,16 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100%;
+  // max-width: 1023px;
   gap: 40px;
   margin: auto;
   margin-bottom: 40px;
 }
 
 .collapseContainer {
-  width: 1023px;
+  width: 100%;
+  max-width: 1023px;
   height: auto;
   margin: auto;
   display: flex;
