--- a/src/components/Infos/Infos.module.scss
+++ b/src/components/Infos/Infos.module.scss
@@ -3,7 +3,8 @@
   flex-direction: column;
   justify-content: center;
   width: 1040px;
-  height: 77px;
+  height: auto;
+  gap: 10px;
 
   h2 {
     font-size: 2.25rem;
