--- a/src/components/Annonces/Annonces.module.scss
+++ b/src/components/Annonces/Annonces.module.scss
@@ -1,6 +1,8 @@
+@import "../../assets/medias.scss";
+
 .annoncesContainer {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   max-width: 1240px;
   width: 100%;
   gap: 50px;
@@ -8,19 +10,30 @@
   padding: 50px;
   background-color: #f6f6f6;
   border-radius: 25px;
+  @include tab {
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    background-color: white;
+    padding: 0;
+    gap: clamp(20px, 5vw, 50px);
+    margin: 20px;
+  }
+
+  .linkAnnonce {
+    width: 100%;
+  }
 
   .annonceCard {
     position: relative;
-    width: 340px;
-    height: 340px;
+    width: 100%;
+    height: auto;
     border-radius: 10px;
     overflow: hidden;
+    aspect-ratio: 1 / 1;
+    @include tab {
+      aspect-ratio: 335 / 255;
+    }
     &:hover {
-      img {
-        // transform: scale(1.05);
-        // transition: 0.5s ease;
-        filter: brightness(90%);
-      }
+      filter: brightness(90%);
     }
 
     img {
@@ -35,7 +48,6 @@
       left: 15px;
       font-size: 18px;
       color: white;
-      z-index: 1;
     }
   }
 }
