--- a/src/components/Banner/Banner.module.scss
+++ b/src/components/Banner/Banner.module.scss
@@ -1,21 +1,32 @@
-$res: calc(0.01 * 10vmin);
+@import "../../assets/medias.scss";
 
 .banner {
+  box-sizing: border-box;
   max-width: 1240px;
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 50px;
+  margin: 0 clamp(20px, 5vw, 40px);
 
   .container {
     display: flex;
     align-items: center;
     justify-content: center;
     width: 100%;
+    max-width: 1240px;
     height: 223px;
     border-radius: 25px;
-    overflow: hidden;
+    margin: auto 20p;
+
+    @include tab {
+      height: 162px;
+    }
+
+    @include xs {
+      height: 111px;
+      margin: 0;
+    }
 
     &.shadow {
       box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
@@ -29,6 +40,13 @@ $res: calc(0.01 * 10vmin);
       height: 100%;
       object-fit: cover;
       z-index: 1;
+      border-radius: 25px;
+      @include tab {
+        border-radius: 15px;
+      }
+      @include xs {
+        border-radius: 10px;
+      }
     }
 
     .homeImg {
@@ -41,10 +59,17 @@ $res: calc(0.01 * 10vmin);
 
     h1 {
       position: absolute;
-      font-size: 48 * $res;
+      font-size: clamp(24px, 5vw, 48px);
       color: white;
       padding: 25px;
       z-index: 2;
+      @include xs {
+        font-size: 24px;
+        padding-left: 162px;
+        margin-right: 255px;
+        margin-left: 40px;
+        width: 418px;
+      }
     }
   }
 }
