--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,7 +1,10 @@
+@import "../../assets/medias.scss";
+
 .container {
   width: 100%;
   display: flex;
   justify-content: center;
+  margin: 0 auto;
 }
 
 footer {
@@ -13,9 +16,13 @@ footer {
   max-width: 1440px;
   height: 209px;
   background-color: black;
-  margin: 0;
+  margin: 0 auto;
   padding-top: 50px;
   gap: 29px;
+  @include xs {
+    gap: 10px;
+    padding-top: 20px;
+  }
 
   img {
     width: 122px;
@@ -25,5 +32,11 @@ footer {
   p {
     color: white;
     font-size: 1.5rem;
+    @include xs {
+      padding-left: 25px;
+      font-size: 0.8rem;
+      width: 40%;
+      margin: 0 auto;
+    }
   }
 }
