--- a/src/components/Infos/Infos.module.scss
+++ b/src/components/Infos/Infos.module.scss
@@ -1,20 +1,38 @@
+@import "../../assets/medias.scss";
 .container {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 1040px;
+  max-width: 1040px;
   height: auto;
   gap: 10px;
+  width: 100%;
+  @include tab {
+    gap: 0;
+  }
 
   h2 {
-    font-size: 2.25rem;
+    font-size: clamp(18px, 4vw, 36px);
     color: #ff6060;
     font-weight: 500;
     margin: 0;
+    @include tab {
+      font-weight: 400;
+      margin-bottom: 10px;
+    }
   }
+
   p {
-    font-size: 1.125rem;
     color: black;
     margin: 0;
+    font-size: 18px;
+    @include tab {
+      font-size: 16px;
+      margin-bottom: 20px;
+    }
+    @include xs {
+      font-size: 14px;
+      margin-bottom: 10px;
+    }
   }
 }
