--- a/src/components/Stars/Stars.module.scss
+++ b/src/components/Stars/Stars.module.scss
@@ -1,3 +1,5 @@
+@import "../../assets/medias.scss";
+
 .container {
   display: flex;
   justify-content: flex-end;
@@ -5,4 +7,20 @@
   width: 196px;
   height: 36px;
   font-size: 24px;
+  @include xs {
+    justify-content: flex-start;
+  }
+  img {
+    width: 24px;
+    height: 24px;
+
+    @include tab {
+      width: 30px;
+      height: 30px;
+    }
+    @include xs {
+      width: 20px;
+      height: 20px;
+    }
+  }
 }
