--- a/src/index.scss
+++ b/src/index.scss
@@ -4,11 +4,11 @@
 ::before,
 ::after {
   box-sizing: border-box;
-  // margin: 0 auto;
   padding: 0;
 }
 
 body {
   font-family: "Montserrat", sans-serif;
+  max-width: 1440px;
   margin: 0 auto;
 }
