--- a/src/pages/About/About.module.scss
+++ b/src/pages/About/About.module.scss
@@ -1,21 +1,36 @@
+@import "../../assets/medias.scss";
+
 .aboutContainer {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
-  // max-width: 1023px;
   gap: 40px;
+  padding-left: clamp(20px, 5vw, 40px);
+  padding-right: clamp(20px, 5vw, 40px);
   margin: auto;
   margin-bottom: 40px;
+  @include xs {
+    gap: 20px;
+    margin-bottom: 20px;
+  }
 }
 
 .collapseContainer {
   width: 100%;
   max-width: 1023px;
   height: auto;
-  margin: auto;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 30px;
+  @include xl {
+    padding: 0 40px;
+    gap: 20px;
+  }
+  @include xs {
+    gap: 20px;
+    padding: 0;
+  }
 }
