--- a/src/pages/Accommodation/Accommodation.module.scss
+++ b/src/pages/Accommodation/Accommodation.module.scss
@@ -1,20 +1,63 @@
+@import "../../assets/medias.scss";
 .container {
-  //   height: 100vh;
   width: 100%;
   max-width: 1240px;
   display: flex;
+  justify-content: center;
   flex-direction: column;
-  margin: 50px auto;
+  margin: 0 auto 50px;
   gap: 20px;
 
-  .infosHostContainer {
-    display: flex;
-    justify-content: space-between;
+  @include xl {
+    width: 100%;
+    padding-left: clamp(20px, 10vh, 40px);
+    padding-right: clamp(20px, 10vh, 40px);
   }
-  .tagsRatingContainer {
+  @include tab {
+    padding: 0 20px;
+    margin-bottom: 25px;
+  }
+  @include xs {
+    gap: 10px;
+  }
+
+  .infosContainer {
+    width: 100%;
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
-    align-items: center;
+    @include tab {
+      flex-direction: column;
+    }
+  }
+
+  .titleTagsContainer {
+    max-width: 70%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 20px;
+    @include tab {
+      width: 100%;
+      max-width: 100%;
+      gap: 0;
+    }
+  }
+  .hostRatingContainer {
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-end;
+    @include tab {
+      width: 100%;
+      align-items: center;
+      flex-direction: row-reverse;
+      margin-top: 20px;
+    }
+    @include xs {
+      margin-top: 15px;
+    }
   }
   .collapsesContainer {
     display: flex;
@@ -22,6 +65,15 @@
     flex-wrap: nowrap;
     width: 100%;
     gap: 76px;
+    @include xl {
+      flex-direction: column;
+      gap: 30px;
+      margin-top: 10px;
+    }
+    @include xs {
+      gap: 20px;
+      margin-top: 0;
+    }
   }
   .equipmentList {
     list-style-type: none;
