--- a/src/pages/NotFound/NotFound.module.scss
+++ b/src/pages/NotFound/NotFound.module.scss
@@ -1,21 +1,41 @@
+@import "../../assets/medias.scss";
+
 .container {
-  height: 100vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 100px;
   color: #ff6060;
+  @include tab {
+    width: 100%;
+  }
 
   h2 {
-    font-size: 288px;
+    font-size: clamp(96px, 20vw, 288px);
+    margin-top: 100px;
+    margin-bottom: 0;
   }
   p {
-    font-size: 36px;
+    font-size: clamp(18px, 3vw, 36px);
+    margin-top: 90px;
+    @include xl {
+      margin: 60px 20px;
+    }
+    @include xs {
+      width: 260px;
+      font-size: 18px;
+      text-indent: 45px;
+    }
   }
   .Link {
-    font-size: 20px;
-    text-decoration: none;
+    font-size: 1.125rem;
+    font-weight: 400;
+    margin-top: 100px;
+    margin-bottom: 130px;
     color: black;
+    @include tab {
+      font-size: 0.9rem;
+    }
   }
 }
