--- a/src/components/Gallery/Gallery.module.scss
+++ b/src/components/Gallery/Gallery.module.scss
@@ -2,7 +2,8 @@
 
 .container {
   position: relative;
-  width: auto;
+  max-width: 1240px;
+  width: 100%;
   height: 415px;
   border-radius: 25px;
   display: flex;
@@ -55,7 +56,7 @@
       justify-content: center;
       color: white;
       font-size: 18px;
-      font-weight: 500;
+      font-weight: 400;
       @include xs {
         display: none;
       }
@@ -63,8 +64,17 @@
   }
   .pictures {
     position: absolute;
-    object-fit: contain;
+    object-fit: cover;
     display: flex;
     justify-content: center;
+    width: 1240px;
+    @include xs {
+      height: 435px;
+    }
+    img {
+      width: 100%;
+      height: 105%;
+      object-fit: contain;
+    }
   }
 }
