--- a/src/components/Gallery/Gallery.module.scss
+++ b/src/components/Gallery/Gallery.module.scss
@@ -74,7 +74,11 @@
     img {
       width: 100%;
       height: 105%;
-      object-fit: contain;
+      object-fit: cover;
+      transform: scale(1.1);
+      @include xs {
+        object-fit: contain;
+      }
     }
   }
 }
